--- a/configserver/src/main/resources/config/gateway.properties
+++ b/configserver/src/main/resources/config/gateway.properties
@@ -1,11 +1,25 @@
 #This is a eureka server so no need to register
-eureka.client.register-with-eureka=false
+#eureka.client.register-with-eureka=false
 
 #This is a eureka server no need to fetch registry
-eureka.client.fetch-registry=false
+#eureka.client.fetch-registry=false
+eureka.client.fetchRegistry=true
 
 #Register url for client
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka
+
+
+
+
+
+
+server.port=8762
+spring.application.name=gateway
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+
+#eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8080/eureka}
+
 
 #timeout
 eureka.server.wait-time-in-ms-when-sync-empty=0
