--- a/transaction/src/main/resources/bootstrap.properties
+++ b/transaction/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 spring.application.name=transaction
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.fail-fast=true
+server.port=8082
